--- a/bootcamp-milestone-2/package.json
+++ b/bootcamp-milestone-2/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "mongoose": "^8.19.3",
     "next": "16.0.1",
     "react": "19.2.0",
